# src/api/authApi.ts
@@ -5,13 +5,15 @@ import { client } from './clientBase';
 import { components } from '@/lib/api';
 import { getApiHeaders } from './apiHeaders';
 
-export const login = async ({
+type AuthEntity = components['schemas']['AuthEntity'];
+
+const login = async ({
   email,
   password,
 }: {
   email: string;
   password: string;
-}): Promise<components['schemas']['AuthEntity'] | undefined> => {
+}): Promise<AuthEntity | undefined> => {
   const { data } = await client.POST('/auth/login', {
     body: {
       email,
@@ -26,10 +28,8 @@ export const login = async ({
   return data;
 };
 
-export const refreshToken = async (): Promise<
-  components['schemas']['AuthEntity'] | undefined
-> => {
-  const headers = await getApiHeaders();
+const refreshToken = async (): Promise<AuthEntity | undefined> => {
+  const { headers } = await getApiHeaders({});
   const { data } = await client.POST('/auth/refresh', { headers });
   if (data?.accessToken && data?.refreshToken) {
     const cookieStore = cookies();
@@ -39,10 +39,31 @@ export const refreshToken = async (): Promise<
   return data;
 };
 
-export const logout = async (): Promise<void> => {
-  const headers = await getApiHeaders();
+const logout = async (): Promise<void> => {
+  const { headers } = await getApiHeaders({});
   await client.POST('/auth/signout', { headers });
   const cookieStore = cookies();
   cookieStore.delete('access_token');
   cookieStore.delete('refresh_token');
 };
+
+const register = async ({
+  email,
+  name,
+  password,
+}: {
+  email: string;
+  name: string;
+  password: string;
+}): Promise<AuthEntity | undefined> => {
+  const { data } = await client.POST('/auth/register', {
+    body: {
+      email,
+      name,
+      password,
+    },
+  });
+  return data;
+};
+
+export { login, refreshToken, logout, register };
