# src/utils/serializer.ts
@@ -1,0 +1,18 @@
+import { components } from '@/lib/api';
+import { FormData } from '@/types';
+
+const serializeTrack = (
+  values: FormData
+): components['schemas']['CreateTrackDto'] => {
+  return {
+    title: values.title,
+    description: values.description || '',
+    duration: values.duration,
+    date: values.date.toISOString(),
+    startTime: '',
+    endTime: '',
+    authorId: '',
+  };
+};
+
+export { serializeTrack };
